add Loader => L 57 bug show up loader during pagination

--- a/src/components/Users/Users.scss
+++ b/src/components/Users/Users.scss
@@ -13,3 +13,8 @@
     color: red;
     font-size: large;
 }
+
+.users__profiles {
+    transform: translateX(10rem);
+    transform: translateY(10rem);
+}
