--- a/src/components/Profile/ProfileInfo/ProfileInfo.scss
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.scss
@@ -1,9 +1,9 @@
- .main__wallpaper img {
+ .profile__wallpaper img {
          height: 600px;
          width: 100%;
      }
      
-.main__content__avatar {
+.profile__content__avatar {
          img {
              width: 50px;
              height: 50px;
