--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,12 +5,23 @@
 .header {
  grid-column: span 12;
  background-color: grey;
-
+ position: relative;
+ display: flex;
+ justify-content: space-between;
    .header__logo {
        width: 50px;
        height: 50px;
        grid-column: span 1;
       
     
+   }
+
+   .header__auth {
+       
+       grid-column: span 2;
+       .header__auth__link {
+         margin-bottom: 3rem;
+         text-decoration: none;
+       }
    }
 }
