--- a/src/components/FormStuff/FormStuff.scss
+++ b/src/components/FormStuff/FormStuff.scss
@@ -15,6 +15,17 @@
             
         }
     }
+   
     
 }
 
+.allerror {
+    display: inline-block;
+    .allerror__text {
+        border-radius: 10%;
+        border: 1px solid rgb(255, 0, 0);
+        color: red;
+        padding: 0.7rem;
+        
+    }
+}
