--- a/src/components/Profile/ProfileInfo/ProfileInfo.scss
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.scss
@@ -1,12 +1,18 @@
- .profile__wallpaper img {
-         height: 600px;
-         width: 100%;
+ 
+ 
+ .profile__wallpaper  {
+    margin-bottom: 5rem;  
+    img {
+        height: 200px;
+        width: 30%;
+    }
+            
      }
      
 .profile__content__avatar {
          img {
-             width: 50px;
-             height: 50px;
+             width: 75px;
+             height: 75px;
          }
      }
 
