--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -22,7 +22,7 @@
   z-index: -1000;
   &--dot {
     animation: dot-keyframes 1.5s infinite ease-in-out;
-    background-color: #000;
+    background-color: rgb(215, 215, 12);
     border-radius: 10px;
     display: inline-block;
     height: 10px;
