--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,27 +1,37 @@
-
+@import "../App/App.scss";
 
 
 
 .header {
  grid-column: span 12;
- background-color: grey;
+ background-color: $text-color-dark;
  position: relative;
  display: flex;
  justify-content: space-between;
+ border-bottom: 1px solid black;
    .header__logo {
-       width: 50px;
+       width: 70px;
        height: 50px;
        grid-column: span 1;
-      
+       padding: 0.8rem;
+       
     
    }
 
-   .header__auth {
-       
+   .header__auth {  
        grid-column: span 2;
+       margin-right: 1rem;
+       margin-top: 1rem;
+       margin-bottom: 1rem;
        .header__auth__link {
-         margin-bottom: 3rem;
+         margin-bottom: 2rem;
          text-decoration: none;
+         color: $text-color-light;
+         
+       }
+       button {
+         padding: 0.5rem;
+         outline: none;
        }
    }
 }
